@@ -1,3 +1,7 @@
+[B]1.0.2[/B]
+- Re-addition of previously unsupported streams
+- Properly check for stream m3u8/mpd and dash activation
+
 [B]1.0.1[/B]
 - Removed unsupported streams
 - Check if Kodi Leia+ for asking about inputstream addon
